# my_test_deep_metric_learning

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
